Fixed warning color. Added comma to list of range of prime. Right aligned footer.

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -64,7 +64,7 @@ p.copyright {
 }
 
 p.warning {
-    --primarycolor: red;
+    --primarycolor: #f00;
     color: var(--primarycolor);
     font-weight: bold;
 }
